--- a/mods/enhanced-attack-indicator.pw.toml
+++ b/mods/enhanced-attack-indicator.pw.toml
@@ -1,6 +1,6 @@
 name = "Enhanced Attack Indicator"
 filename = "enhanced_attack_indicator-1.1.1+1.21-forge.jar"
-side = "both"
+side = "client"
 
 [download]
 hash-format = "sha1"
